--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="header">
       <h1>Hori<span class="seo">seo</span>n</h1>
-      <article>
+      <nav>
         <ul>
           <li>
             <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,11 +23,11 @@
             <a href="#social-media-marketing">Social Media Marketing</a>
           </li>
         </ul>
-      </article>
+      </nav>
     </header>
     <div class="hero"></div>
-    <section class="content">
-      <div class="search-engine-optimization">
+    <main class="content">
+      <section class="service">
         <img
           src="./assets/images/search-engine-optimization.jpg"
           alt="search engine optimization"
@@ -40,10 +40,10 @@
           home. Search Engine Optimization (SEO) allows you to increase your
           visibility and find the right customers for your business.
         </p>
-      </div>
-      <div
+      </section>
+      <section
         id="online-reputation-management"
-        class="online-reputation-management"
+        class="service"
       >
         <img
           src="./assets/images/online-reputation-management.jpg"
@@ -58,8 +58,8 @@
           control over what potential customers see when they search for your
           business.
         </p>
-      </div>
-      <div id="social-media-marketing" class="social-media-marketing">
+      </section>
+      <section id="social-media-marketing" class="service">
         <img
           src="./assets/images/social-media-marketing.jpg"
           alt="Social Media Marketing"
@@ -72,10 +72,10 @@
           to your brand, using analytics to find the right markets and increase
           your lead generation.
         </p>
-      </div>
-    </section>
-    <section class="benefits">
-      <div class="benefit-lead">
+      </section>
+    </main>
+    <aside class="benefits">
+      <div class="benefit">
         <h3>Lead Generation</h3>
         <img src="./assets/images/lead-generation.png" alt="Lead Generations" />
         <p>
@@ -83,7 +83,7 @@
           business, bringing customers directly to your website.
         </p>
       </div>
-      <div class="benefit-brand">
+      <div class="benefit">
         <h3>Brand Awareness</h3>
         <img src="./assets/images/brand-awareness.png" alt="Brand Awareness" />
         <p>
@@ -91,7 +91,7 @@
           the search ranking and visibility for your business.
         </p>
       </div>
-      <div class="benefit-cost">
+      <div class="benefit">
         <h3>Cost Management</h3>
         <img src="./assets/images/cost-management.png" alt="Cost Management" />
         <p>
@@ -99,7 +99,7 @@
           costs decrease, and you no longer need to advertise your page.
         </p>
       </div>
-    </section>
+    </aside>
     <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
